Use Twig templates and improve UI

--- a/apps/Demo/View/users_list.twig
+++ b/apps/Demo/View/users_list.twig
@@ -6,20 +6,23 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+<header>KoruPHP Demo</header>
+<div class="container">
 <h1>Users</h1>
 <p><a href="/users/create">Add User</a> | <a href="/">Home</a></p>
 <table>
     <tr><th>ID</th><th>Username</th><th class="actions">Actions</th></tr>
-    <?php foreach ($users as $u): ?>
+    {% for u in users %}
         <tr>
-            <td><?= htmlspecialchars($u['id']) ?></td>
-            <td><?= htmlspecialchars($u['username']) ?></td>
+            <td>{{ u.id }}</td>
+            <td>{{ u.username }}</td>
             <td class="actions">
-                <a href="/users/edit?id=<?= $u['id'] ?>">Edit</a>
-                <a href="/users/delete?id=<?= $u['id'] ?>" onclick="return confirm('Delete user?');">Delete</a>
+                <a href="/users/edit?id={{ u.id }}">Edit</a>
+                <a href="/users/delete?id={{ u.id }}" onclick="return confirm('Delete user?');">Delete</a>
             </td>
         </tr>
-    <?php endforeach; ?>
+    {% endfor %}
 </table>
+</div>
 </body>
 </html>
