--- a/apps/Demo/View/login.twig
+++ b/apps/Demo/View/login.twig
@@ -6,22 +6,24 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+<header>KoruPHP Demo</header>
+<div class="container">
 <h1>Login</h1>
-<?php if (isset($_SESSION['user'])): ?>
-<p>You are logged in as <?= htmlspecialchars($_SESSION['user']) ?>. <a href="/">Go to home</a></p>
-<?php endif; ?>
+{% if session.user is defined %}
+<p>You are logged in as {{ session.user }}. <a href="/">Go to home</a></p>
+{% endif %}
 <form method="POST" action="/login">
     <input type="text" name="username" placeholder="Username" required>
     <input type="password" name="password" placeholder="Password" required>
     <button type="submit">Login</button>
 </form>
 <div id="g_id_onload"
-     data-client_id="<?= htmlspecialchars($googleClientId) ?>"
+     data-client_id="{{ googleClientId }}"
      data-login_uri="/google-callback"
      data-ux_mode="popup">
 </div>
 <div class="g_id_signin" data-type="standard"></div>
-<pre id="message"></pre>
 <script src="https://accounts.google.com/gsi/client" async defer></script>
+</div>
 </body>
 </html>
